--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="pages">
     <header class="header">
-      <img class="logo" src="./images/logo.svg" alt="logoMesto" />
+      <img class="logo" src="./images/logo.svg" alt="Лого" />
       <div class="line"></div>
     </header>
     <main class="main-page">
@@ -49,21 +49,21 @@
           </div>
         </article>
         <article class="card">
-          <img class="card__image" src="./images/dombai.jpg" alt="dombai" />
+          <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
             <input class="card__like" />
           </div>
         </article>
         <article class="card">
-          <img class="card__image" src="./images/dombai.jpg" alt="dombai" />
+          <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
             <input class="card__like" />
           </div>
         </article>
         <article class="card">
-          <img class="card__image" src="./images/dombai.jpg" alt="dombai" />
+          <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
             <input class="card__like" />
