--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
         <button type="button" class="popup__close-button"></button>
         <p class="popup__edit-heading">Редактировать профиль</p>
         <form class="input__container">
-          <input type="text" value="Жак-Ив Кусто" class="popup__name" />
+          <input type="text" value="Жак-Ив Кусто" class="input__name" />
           <input
             type="text"
             value="Исследователь океана"
-            class="popup__description"
+            class="input__description"
           />
-          <button type="submit" class="popup__save-button">Сохранить</button>
+          <button type="submit" class="input__save-button">Сохранить</button>
         </form>
       </div>
     </div>
