--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
     </footer>
     <div class="popup">
       <div class="popup__container">
-        <button type="button" class="popup__close-button"></button>
+        <button type="button" class="popup__close"></button>
         <p class="popup__edit-heading">Редактировать профиль</p>
-        <form class="input__container">
-          <input type="text" value="Жак-Ив Кусто" class="input__name" />
+        <form class="popup__form">
+          <input type="text" value="Жак-Ив Кусто" class="popup__name" />
           <input
             type="text"
             value="Исследователь океана"
-            class="input__description"
+            class="popup__description"
           />
-          <button type="submit" class="input__save-button">Сохранить</button>
+          <button type="submit" class="popup__save">Сохранить</button>
         </form>
       </div>
     </div>
