--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
   <body class="pages">
     <header class="header">
       <img class="logo" src="./images/logo.svg" alt="Лого" />
-      <div class="line"></div>
+      <!-- <div class="line"></div> -->
     </header>
     <main class="main-page">
       <section class="profile">
         <img class="profile__avatar" src="./images/Kusto.jpg" alt="Кусто" />
         <div class="profile__info">
           <button type="button" class="profile__edit-button"></button>
-          <div class="profile__name">Жак-Ив Кусто</div>
-          <div class="profile__desc-profile">Исследователь океана</div>
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <p class="profile__desc-profile">Исследователь океана</p>
         </div>
-        <a type="button" class="profile__add-button"></a>
+        <button type="button" class="profile__add-button"></button>
       </section>
       <section class="cards">
         <article class="card">
           <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
-            <input class="card__like" />
+            <button class="card__like"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/elbrus.png" alt="Эльбрус" />
           <div class="card__block">
             <h2 class="card__heading">Эльбрус</h2>
-            <input class="card__like" />
+            <button class="card__like"></button>
           </div>
         </article>
         <article class="card">
@@ -45,45 +45,51 @@
           />
           <div class="card__block">
             <h2 class="card__heading">Карачаевск</h2>
-            <input class="card__like" />
+            <button class="card__like"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
-            <input class="card__like" />
+            <button class="card__like"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
-            <input class="card__like" />
+            <button class="card__like"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
-            <input class="card__like" />
+            <button class="card__like"></button>
           </div>
         </article>
       </section>
     </main>
     <footer class="footer">
-      <p class="footer__copyright">&copy 2023 Mesto Russia</p>
+      <p class="footer__copyright">&#169;2023 Mesto Russia</p>
     </footer>
     <div class="popup">
       <div class="popup__container">
         <button type="button" class="popup__close"></button>
-        <p class="popup__edit-heading">Редактировать профиль</p>
-        <form class="popup__form">
-          <input type="text" value="Жак-Ив Кусто" class="popup__name" />
+        <h2 class="popup__edit-heading">Редактировать профиль</h2>
+        <form class="popup__form" name="form">
+          <input
+            type="text"
+            value="Жак-Ив Кусто"
+            class="popup__input popup__input_select_name"
+            name="name"
+          />
           <input
             type="text"
             value="Исследователь океана"
-            class="popup__description"
+            class="popup__input popup__input_select_description"
+            name="description"
           />
           <button type="submit" class="popup__save">Сохранить</button>
         </form>
