--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
-            <button class="card__like"></button>
+            <button class="card__like" type="button"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/elbrus.png" alt="Эльбрус" />
           <div class="card__block">
             <h2 class="card__heading">Эльбрус</h2>
-            <button class="card__like"></button>
+            <button class="card__like" type="button"></button>
           </div>
         </article>
         <article class="card">
@@ -45,28 +45,28 @@
           />
           <div class="card__block">
             <h2 class="card__heading">Карачаевск</h2>
-            <button class="card__like"></button>
+            <button class="card__like" type="button"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
-            <button class="card__like"></button>
+            <button class="card__like" type="button"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
-            <button class="card__like"></button>
+            <button class="card__like" type="button"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
-            <button class="card__like"></button>
+            <button class="card__like" type="button"></button>
           </div>
         </article>
       </section>
