--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </section>
       <section class="cards">
         <article class="card">
+          <!-- <button class="card__trashcan" type="button"></button>
           <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
@@ -31,6 +32,7 @@
           </div>
         </article>
         <article class="card">
+          <button class="card__trashcan" type="button"></button>
           <img class="card__image" src="./images/elbrus.png" alt="Эльбрус" />
           <div class="card__block">
             <h2 class="card__heading">Эльбрус</h2>
@@ -38,6 +40,7 @@
           </div>
         </article>
         <article class="card">
+          <button class="card__trashcan" type="button"></button>
           <img
             class="card__image"
             src="./images/karachaevsk.png"
@@ -49,6 +52,7 @@
           </div>
         </article>
         <article class="card">
+          <button class="card__trashcan" type="button"></button>
           <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
@@ -56,6 +60,7 @@
           </div>
         </article>
         <article class="card">
+          <button class="card__trashcan" type="button"></button>
           <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
@@ -63,12 +68,13 @@
           </div>
         </article>
         <article class="card">
+          <button class="card__trashcan" type="button"></button>
           <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
             <button class="card__like" type="button"></button>
           </div>
-        </article>
+        </article> -->
       </section>
     </main>
     <footer class="footer">
@@ -95,6 +101,46 @@
         </form>
       </div>
     </div>
+    <div class="popup-add">
+      <div class="popup-add__container">
+        <button type="button" class="popup-add__close"></button>
+        <h2 class="popup-add__heading">Новое место</h2>
+        <form class="popup-add__form" name="form">
+          <input
+            type="text"
+            value="Название"
+            class="popup-add__input popup-add__input_select_name"
+            name="name"
+          />
+          <input
+            type="text"
+            value="Ссылка на картинку"
+            class="popup-add__input popup-add__input_select_link"
+            name="link"
+          />
+          <button type="submit" class="popup-add__create-button">
+            Создать
+          </button>
+        </form>
+      </div>
+    </div>
+    <div class="popup-zoom">
+      <div class="popup-zoom__container">
+        <button type ="button" class="popup-zoom__close"></button>
+        <img class="popup-zoom__image">
+        <p class="popup-zoom__caption"></p>
+      </div>
+    </div>
+    <template class="template">
+      <article class="card">
+        <button class="card__trashcan" type="button"></button>
+        <img class="card__image" />
+        <div class="card__block">
+          <h2 class="card__heading"></h2>
+          <button class="card__like" type="button"></button>
+        </div>
+      </article>
+    </template>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
