--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <button type="button" class="profile__add-button"></button>
       </section>
       <section class="cards">
-        <article class="card">
-          <!-- <button class="card__trashcan" type="button"></button>
+        <!-- <article class="card"> -->
+        <!-- <button class="card__trashcan" type="button"></button>
           <img class="card__image" src="./images/dombai.jpg" alt="Домбай" />
           <div class="card__block">
             <h2 class="card__heading">Домбай</h2>
@@ -126,8 +126,8 @@
     </div>
     <div class="popup-zoom">
       <div class="popup-zoom__container">
-        <button type ="button" class="popup-zoom__close"></button>
-        <img class="popup-zoom__image">
+        <button type="button" class="popup-zoom__close"></button>
+        <img class="popup-zoom__image" />
         <p class="popup-zoom__caption"></p>
       </div>
     </div>
