--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <footer class="footer">
       <p class="footer__copyright">&#169;2023 Mesto Russia</p>
     </footer>
-    <div class="popup popup__edit-profile">
+    <div class="popup popup_type_edit-profile">
       <div class="popup__container">
         <button
           type="button"
@@ -57,7 +57,7 @@
         </form>
       </div>
     </div>
-    <div class="popup popup__add-card">
+    <div class="popup popup_type_add-card">
       <div class="popup__container">
         <button
           type="button"
