--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
         <form class="popup__form popup__form_type_add-card" name="form">
           <input
             type="text"
-            value="Название"
             class="popup__input popup__input_select_place"
             name="name"
+            placeholder="Название"
           />
           <input
             type="text"
-            value="Ссылка на картинку"
+            placeholder="Ссылка на картинку"
             class="popup__input popup__input_select_link"
             name="link"
           />
