--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         </div>
       </article>
     </template>
+    <script src="./scripts/constants.js"></script>
     <script src="scripts/validate.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
