--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <p class="popup__zoom-caption"></p>
       </div>
     </div>
-    <template class="template">
+    <template class="template" id="templateID">
       <article class="card">
         <button class="card__trashcan" type="button"></button>
         <img class="card__image" />
@@ -126,8 +126,9 @@
         </div>
       </article>
     </template>
-    <script src="./scripts/constants.js"></script>
-    <script src="scripts/validate.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/card.js" defer></script>
+    <script type="module" src="./scripts/constants.js" defer></script>
+    <script type="module" src="./scripts/FormValidator.js" defer></script>
+    <script type="module" src="./scripts/index.js" defer></script>
   </body>
 </html>
