--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
           class="popup__close popup__close_type_edit-profile"
         ></button>
         <h2 class="popup__heading">Редактировать профиль</h2>
-        <form class="popup__form popup__form_type_edit-profile" name="form">
+        <form
+          class="popup__form popup__form_type_edit-profile"
+          name="edit-form"
+        >
           <input
             minlength="2"
             maxlength="40"
@@ -76,7 +79,7 @@
           class="popup__close popup__close_type_add-card"
         ></button>
         <h2 class="popup__heading">Новое место</h2>
-        <form class="popup__form popup__form_type_add-card" name="form">
+        <form class="popup__form popup__form_type_add-card" name="card-form">
           <input
             minlength="2"
             maxlength="30"
