--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         <p class="popup__zoom-caption"></p>
       </div>
     </div>
+    <!-- ШАБЛОН -->
     <template class="template" id="templateID">
       <article class="card">
         <button class="card__trashcan" type="button"></button>
