--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <!-- <link rel="stylesheet" href="./pages/index.css" /> -->
     <title>MestoRussia</title>
   </head>
   <body class="pages">
     <header class="header">
-      <img class="logo" src="./images/logo.svg" alt="Лого" />
+      <img class="logo" src="<%=require('./images/logo.svg')%>" alt="Лого" />
     </header>
     <main class="main-page">
       <section class="profile">
-        <img class="profile__avatar" src="./images/Kusto.jpg" alt="Кусто" />
+        <img
+          class="profile__avatar"
+          src="<%=require('./images/Kusto.jpg')%>"
+          alt="Кусто"
+        />
         <div class="profile__info">
           <button type="button" class="profile__edit-button"></button>
           <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -96,7 +100,7 @@
             required
             placeholder="Ссылка на картинку"
             class="popup__input popup__input_select_link"
-            name="link"
+            name="description"
             id="link-value"
           />
           <span class="popup__input-error link-value-input-error"></span>
@@ -109,6 +113,7 @@
         </form>
       </div>
     </div>
+    <!-- //попап увеличенной картинки -->
     <div class="popup popup_type_zoom">
       <div class="popup__zoom-container">
         <button
@@ -119,6 +124,7 @@
         <p class="popup__zoom-caption"></p>
       </div>
     </div>
+    <!-- //попап увеличенной картинки -->
     <!-- ШАБЛОН -->
     <template class="template" id="templateID">
       <article class="card">
@@ -130,9 +136,14 @@
         </div>
       </article>
     </template>
+    <!-- <script type="module" src="./scripts/Section.js"></script>
+    <script type="module" src="./scripts/PopupWithForm.js" defer></script>
+    <script type="module" src="./scripts/UserInfo.js" defer></script>
+    <script type="module" src="./scripts/Popup.js" defer></script>
+    <script type="module" src="./scripts/PopupWithImage.js" defer></script>
     <script type="module" src="./scripts/card.js" defer></script>
     <script type="module" src="./scripts/constants.js" defer></script>
     <script type="module" src="./scripts/FormValidator.js" defer></script>
-    <script type="module" src="./scripts/index.js" defer></script>
+    <script type="module" src="./scripts/index.js" defer></script> -->
   </body>
 </html>
