--- a/src/index.html
+++ b/src/index.html
@@ -124,6 +124,8 @@
         <p class="popup__zoom-caption"></p>
       </div>
     </div>
+    <!-- <div></div> ПОПАП подтверждения удаления карточки -->
+    <!-- <div></div> ПОПАП установки аватара -->
     <!-- //попап увеличенной картинки -->
     <!-- ШАБЛОН -->
     <template class="template" id="templateID">
@@ -133,17 +135,9 @@
         <div class="card__block">
           <h2 class="card__heading"></h2>
           <button class="card__like" type="button"></button>
+          <p class="card__likes-numer">0</p>
         </div>
       </article>
     </template>
-    <!-- <script type="module" src="./scripts/Section.js"></script>
-    <script type="module" src="./scripts/PopupWithForm.js" defer></script>
-    <script type="module" src="./scripts/UserInfo.js" defer></script>
-    <script type="module" src="./scripts/Popup.js" defer></script>
-    <script type="module" src="./scripts/PopupWithImage.js" defer></script>
-    <script type="module" src="./scripts/card.js" defer></script>
-    <script type="module" src="./scripts/constants.js" defer></script>
-    <script type="module" src="./scripts/FormValidator.js" defer></script>
-    <script type="module" src="./scripts/index.js" defer></script> -->
   </body>
 </html>
